network.tf
# ------------------------------------------
# Create a VPC
# ------------------------------------------

resource "aws_vpc" "vpc" {
  // NOTE: need to learn about cidr_block and how to calculate it
  cidr_block                       = "192.168.0.0/20"
  instance_tenancy                 = "default"
  enable_dns_support               = true
  enable_dns_hostnames             = true
  assign_generated_ipv6_cidr_block = false

  tags = {
    Name    = "${var.project}-${var.environment}-vpc"
    project = var.project
  }

}


# ------------------------------------------
# Create a Subnet
# ------------------------------------------

resource "aws_subnet" "public_subnet_1a" {
  vpc_id                  = aws_vpc.vpc.id
  availability_zone       = "ap-northeast-1a"
  cidr_block              = "192.168.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name    = "${var.project}-${var.environment}-public-subnet-1a"
    project = var.project
    ENV     = var.environment
    Type    = "public"
  }
}

resource "aws_subnet" "private_subnet_1a" {
  vpc_id                  = aws_vpc.vpc.id
  availability_zone       = "ap-northeast-1a"
  cidr_block              = "192.168.2.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name    = "${var.project}-${var.environment}-private-subnet-1a"
    project = var.project
    ENV     = var.environment
    Type    = "private"
  }
}

resource "aws_subnet" "public_subnet_1c" {
  vpc_id                  = aws_vpc.vpc.id
  availability_zone       = "ap-northeast-1c"
  cidr_block              = "192.168.3.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name    = "${var.project}-${var.environment}-public-subnet-1c"
    project = var.project
    ENV     = var.environment
    Type    = "public"
  }
}

resource "aws_subnet" "private_subnet_1c" {
  vpc_id                  = aws_vpc.vpc.id
  availability_zone       = "ap-northeast-1c"
  cidr_block              = "192.168.4.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name    = "${var.project}-${var.environment}-private-subnet-1c"
    project = var.project
    ENV     = var.environment
    Type    = "private"
  }
}

# ---------------------------------------------
# Create Route table
# --------------------------------------------
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.id

  tags = {
    Name    = "${var.project}-${var.environment}-public-rt"   
    project = var.project
    Env    = var.environment
    Type    = "public"
  }
}

resource "aws_route_table_association" "public_rt_association_1a" {
  subnet_id      = aws_subnet.public_subnet_1a.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "public_rt_association_1c" {
  subnet_id = aws_route_table.public_rt.id
  route_table_id = aws_route_table.public_subnet_1c.id
}
